권장휴가 관련 파일 삭제 - holiday로 통합 및 holidayType을 추가하여 관리하도록 변경 DTO 생성 및 수정 - 기존 Controller에서 사용하던 dto 삭제 및 DTO 폴더 생성 후 각 dto를 사용하여 변환하도록 수정